# FantasyICP

./: ARCHITECTURE.md  Cargo.toml  FRONTEND_ARCHITECTURE.md  README.md  USER_FLOW_DIAGRAMS.md  canister_ids.json  dfx.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  declarations.d.ts  main.tsx
frontend/src/components/auth/: Login.tsx  Profile.tsx  Register.tsx  index.ts
frontend/src/components/common/: ErrorBoundary.tsx  Footer.tsx  Header.tsx  Loading.tsx  Modal.tsx  ProtectedRoute.tsx  README.md  Sidebar.tsx  index.ts
frontend/src/components/contests/: ContestCard.tsx  ContestDetail.tsx  ContestLeaderboard.tsx  ContestList.tsx
frontend/src/components/dashboard/: BalanceCard.tsx  Dashboard.tsx  Notifications.tsx  RecentContests.tsx  index.ts
frontend/src/components/fantasy/: CaptainSelector.tsx  PlayerSelector.tsx  PointsCalculator.tsx  TeamBuilder.tsx  (+1 more)
frontend/src/hooks/: index.ts  useAuth.ts  useContests.ts  useTournaments.ts  useWebSocket.ts
frontend/src/pages/: Contests.tsx  Dashboard.tsx  Home.tsx  Login.tsx  MyTeams.tsx  Profile.tsx  Rewards.tsx  Tournaments.tsx
frontend/src/services/: actor.ts  api.ts  contests.ts  fantasy.ts  rewards.ts  tournaments.ts
frontend/src/store/: authSlice.ts  contestSlice.ts  index.ts  tournamentSlice.ts  userSlice.ts
frontend/src/types/: auth.ts  contest.ts  index.ts  player.ts  reward.ts  tournament.ts
frontend/src/utils/: constants.ts  formatters.ts  helpers.ts  query.idl.js  validation.ts
src/backendmain/: Cargo.toml  backend.did
src/backendmain/src/: lib.rs
(+10 files in other folders)
